--- a/docs/en/rest-api/ml/delete-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/delete-datafeed.asciidoc
@@ -15,7 +15,7 @@ NOTE: You must stop the data feed before you can delete it.
 ===== Path Parameters
 
 `feed_id` (required)::
-  (+string+) Identifier for the data feed
+  (string) Identifier for the data feed
 ////
 ===== Responses
 
