--- a/docs/en/rest-api/ml/datafeedresource.asciidoc
+++ b/docs/en/rest-api/ml/datafeedresource.asciidoc
@@ -5,7 +5,7 @@
 A data feed resource has the following properties:
 
 `aggregations`::
-  (+object+) TBD
+  (object) TBD
   The aggregations object describes the aggregations that are
   applied to the search query?
   For more information, see {ref}search-aggregations.html[Aggregations].
@@ -16,23 +16,23 @@ A data feed resource has the following properties:
   "field": "events_per_min"}}}}}`.
 
 `chunking_config`::
-    (+object+) TBD.
-    For example: {"mode": "manual", "time_span": "30000000ms"}
+  (object) TBD.
+  For example: {"mode": "manual", "time_span": "30000000ms"}
 
 `datafeed_id`::
- (+string+) A numerical character string that uniquely identifies the data feed.
+ (string) A numerical character string that uniquely identifies the data feed.
 
 `frequency`::
    TBD. For example: "150s"
 
 `indexes` (required)::
-  (+array+) An array of index names. For example: ["it_ops_metrics"]
+  (array) An array of index names. For example: ["it_ops_metrics"]
 
 `job_id` (required)::
- (+string+) A numerical character string that uniquely identifies the job.
+ (string) A numerical character string that uniquely identifies the job.
 
 `query`::
-  (+object+) TBD. The query that retrieves the data.
+  (object) TBD. The query that retrieves the data.
   By default, this property has the following value: `{"match_all": {"boost": 1}}`.
 
 `query_delay`::
@@ -44,7 +44,7 @@ A data feed resource has the following properties:
   The default value is `1000`.
 
 `types` (required)::
-  (+array+) TBD. For example: ["network","sql","kpi"]
+  (array) TBD. For example: ["network","sql","kpi"]
 
 [float]
 [[ml-datafeed-counts]]
@@ -57,10 +57,10 @@ progress of a data feed. For example:
   TBD. For example: " "
 
 `datafeed_id`::
- (+string+) A numerical character string that uniquely identifies the data feed.
+ (string) A numerical character string that uniquely identifies the data feed.
 
 `node`::
-  (+object+) TBD
+  (object) TBD
   The node that is running the query?
   `id`::: TBD. For example, "0-o0tOoRTwKFZifatTWKNw".
   `name`::: TBD. For example, "0-o0tOo".
@@ -69,7 +69,6 @@ progress of a data feed. For example:
   `attributes`::: TBD. For example, {"max_running_jobs": "10"}.
 
 `state`::
-  (+string+) The status of the data feed,
-  which can be one of the following values:
-    started:: The data feed is actively receiving data.
-    stopped:: The data feed is stopped and will not receive data until it is re-started.
+  (string) The status of the data feed, which can be one of the following values: +
+  started::: The data feed is actively receiving data.
+  stopped::: The data feed is stopped and will not receive data until it is re-started.
