--- a/docs/en/rest-api/ml/get-category.asciidoc
+++ b/docs/en/rest-api/ml/get-category.asciidoc
@@ -17,10 +17,10 @@ about the categories in the results for a job.
 ===== Path Parameters
 
 `job_id`::
-  (+string+) Identifier for the job.
+  (string) Identifier for the job.
 
 `category_id`::
-  (+string+) Identifier for the category. If you do not specify this optional parameter,
+  (string) Identifier for the category. If you do not specify this optional parameter,
   the API returns information about all categories that you have authority to view.
 
 ===== Request Body
@@ -28,17 +28,17 @@ about the categories in the results for a job.
 //TBD: Test these properties, since they didn't work on older build.
 
 `from`::
-  (+integer+) Skips the specified number of categories.
+  (integer) Skips the specified number of categories.
 
 `size`::
-  (+integer+) Specifies the maximum number of categories to obtain.
+  (integer) Specifies the maximum number of categories to obtain.
 
 ===== Results
 
 The API returns the following information:
 
 `categories`::
-    (+array+) An array of category objects. For more information, see
+  (array) An array of category objects. For more information, see
     <<ml-results-categories,Categories>>.
 ////
 ===== Responses
