--- a/docs/en/rest-api/ml/get-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/get-datafeed.asciidoc
@@ -18,7 +18,7 @@ OUTDATED?: The get job API can also be applied to all jobs by using `_all` as th
 ===== Path Parameters
 
 `feed_id`::
-  (+string+) Identifier for the data feed.
+  (string) Identifier for the data feed.
   If you do not specify this optional parameter, the API returns information
   about all data feeds that you have authority to view.
 
@@ -27,7 +27,7 @@ OUTDATED?: The get job API can also be applied to all jobs by using `_all` as th
 The API returns the following information:
 
 `datafeeds`::
-  (+array+) An array of data feed objects.
+  (array) An array of data feed objects.
   For more information, see <<ml-datafeed-resource,data feed resources>>.
 
 ////
