--- a/docs/en/rest-api/ml/get-job-stats.asciidoc
+++ b/docs/en/rest-api/ml/get-job-stats.asciidoc
@@ -17,7 +17,7 @@ The get jobs API allows you to retrieve usage information for jobs.
 ===== Path Parameters
 
 `job_id`::
-  (+string+) Identifier for the job. If you do not specify this optional parameter,
+  (string) Identifier for the job. If you do not specify this optional parameter,
   the API returns information about all jobs that you have authority to view.
 
 
@@ -26,7 +26,7 @@ The get jobs API allows you to retrieve usage information for jobs.
 The API returns the following information:
 
 `jobs`::
-  (+array+) An array of job count objects.
+  (array) An array of job count objects.
   For more information, see <<ml-jobcounts,Job Counts>>.
 
 ////
