--- a/docs/en/rest-api/ml/get-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/get-snapshot.asciidoc
@@ -16,44 +16,44 @@ The get model snapshots API enables you to retrieve information about model snap
 ===== Path Parameters
 
 `job_id`::
-  (+string+) Identifier for the job.
+  (string) Identifier for the job.
 
 `snapshot_id`::
-  (+string+) Identifier for the model snapshot. If you do not specify this optional parameter,
+  (string) Identifier for the model snapshot. If you do not specify this optional parameter,
   the API returns information about all model snapshots that you have authority to view.
 
 ===== Request Body
 
 `desc`::
-  (+boolean+) If true, the results are sorted in descending order.
+  (boolean) If true, the results are sorted in descending order.
 
 `description`::
-  (+string+) Returns snapshots that match this description.
+  (string) Returns snapshots that match this description.
 //TBD: I couldn't get this to work. What description value is it using?
 NOTE: It might be necessary to URL encode the description.
 
 `end`::
-  (+date+) Returns snapshots with timestamps earlier than this time.
+  (date) Returns snapshots with timestamps earlier than this time.
 
 `from`::
-  (+integer+) Skips the specified number of snapshots.
+  (integer) Skips the specified number of snapshots.
 
 `size`::
-  (+integer+) Specifies the maximum number of snapshots to obtain.
+  (integer) Specifies the maximum number of snapshots to obtain.
 
 `sort`::
-  (+string+) Specifies the sort field for the requested snapshots.
+  (string) Specifies the sort field for the requested snapshots.
 //By default, the snapshots are sorted by the xxx value.
 
 `start`::
-  (+string+) Returns snapshots with timestamps after this time.
+  (string) Returns snapshots with timestamps after this time.
 
 ===== Results
 
 The API returns the following information:
 
 `model_snapshots`::
-  (+array+) An array of model snapshot objects. For more information, see
+  (array) An array of model snapshot objects. For more information, see
   <<ml-snapshot-resource,Model Snapshots>>.
 
 ////
