--- a/docs/en/rest-api/ml/open-job.asciidoc
+++ b/docs/en/rest-api/ml/open-job.asciidoc
@@ -21,16 +21,16 @@ The job is ready to resume its analysis from where it left off, once new data is
 ===== Path Parameters
 
 `job_id` (required)::
-(+string+) Identifier for the job
+(string) Identifier for the job
 
 ===== Request Body
 
 `open_timeout`::
-  (+time+) Controls the time to wait until a job has opened.
+  (time) Controls the time to wait until a job has opened.
   The default value is 30 minutes.
 
 `ignore_downtime`::
-  (+boolean+) If true (default), any gap in data since it was
+  (boolean) If true (default), any gap in data since it was
   last closed is treated as a maintenance window. That is to say, it is not an anomaly
 
 ////
