--- a/docs/en/rest-api/ml/put-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/put-datafeed.asciidoc
@@ -16,28 +16,28 @@ data feed to each job.
 ===== Path Parameters
 
 `feed_id` (required)::
-  (+string+) A numerical character string that uniquely identifies the data feed.
+  (string) A numerical character string that uniquely identifies the data feed.
 
 ===== Request Body
 
 `aggregations`::
-  (+object+) TBD.
+  (object) TBD.
 
 `chunking_config`::
-  (+object+) TBD.
+  (object) TBD.
   For example: {"mode": "manual", "time_span": "30000000ms"}
 
 `frequency`::
    TBD: For example: "150s"
 
 `indexes` (required)::
-  (+array+) An array of index names. For example: ["it_ops_metrics"]
+  (array) An array of index names. For example: ["it_ops_metrics"]
 
 `job_id` (required)::
- (+string+) A numerical character string that uniquely identifies the job.
+ (string) A numerical character string that uniquely identifies the job.
 
 `query`::
-  (+object+) The query that retrieves the data.
+  (object) The query that retrieves the data.
   By default, this property has the following value: `{"match_all": {"boost": 1}}`.
 
 `query_delay`::
