--- a/docs/en/rest-api/ml/revert-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/revert-snapshot.asciidoc
@@ -53,17 +53,17 @@ ensure that you do not expect data imminently.
 ===== Path Parameters
 
 `job_id` (required)::
-  (+string+) Identifier for the job
+  (string) Identifier for the job
 
 `snapshot_id` (required)::
-  (+string+) Identifier for the model snapshot
+  (string) Identifier for the model snapshot
 
 ===== Request Body
 
 `delete_intervening_results`::
-    (+boolean+) If true, deletes the results in the time period between the
-    latest results and the time of the reverted snapshot. It also resets the
-    model to accept records for this time period.
+  (boolean) If true, deletes the results in the time period between the
+  latest results and the time of the reverted snapshot. It also resets the
+  model to accept records for this time period.
 
 NOTE: If you choose not to delete intervening results when reverting a snapshot,
 the job will not accept input data that is older than the current time.
