--- a/docs/en/rest-api/ml/snapshotresource.asciidoc
+++ b/docs/en/rest-api/ml/snapshotresource.asciidoc
@@ -20,32 +20,32 @@ When choosing a new value, consider the following:
 A model snapshot resource has the following properties:
 
 `description`::
-  (+string+) An optional description of the job.
+  (string) An optional description of the job.
 
 `job_id`::
-  (+string+) A numerical character string that uniquely identifies the job.
+  (string) A numerical character string that uniquely identifies the job.
 
 `latest_record_time_stamp`::
-  (++) TBD. For example: 1455232663000.
+  () TBD. For example: 1455232663000.
 
 `latest_result_time_stamp`::
-  (++) TBD. For example: 1455229800000.
+  () TBD. For example: 1455229800000.
 
 `model_size_stats`::
-  (+object+) TBD. See <<ml-snapshot-stats,Model Size Statistics>>.
+  (object) TBD. See <<ml-snapshot-stats,Model Size Statistics>>.
 
 `retain`::
-  (+boolean+) TBD. For example: false.
+  (boolean) TBD. For example: false.
 
 `snapshot_id`::
-  (+string+) A numerical character string that uniquely identifies the model
+  (string) A numerical character string that uniquely identifies the model
   snapshot. For example: "1491852978".
 
 `snapshot_doc_count`::
-  (++) TBD. For example: 1.
+  () TBD. For example: 1.
 
 `timestamp`::
-  (+date+) The creation timestamp for the snapshot, specified in ISO 8601 format.
+  (date) The creation timestamp for the snapshot, specified in ISO 8601 format.
   For example: 1491852978000.
 
 [float]
@@ -55,31 +55,31 @@ A model snapshot resource has the following properties:
 The `model_size_stats` object has the following properties:
 
 `bucket_allocation_failures_count`::
-  (++) TBD. For example: 0.
+  () TBD. For example: 0.
 
 `job_id`::
-  (+string+) A numerical character string that uniquely identifies the job.
+  (string) A numerical character string that uniquely identifies the job.
 
 `log_time`::
-  (++) TBD. For example: 1491852978000.
+  () TBD. For example: 1491852978000.
 
 `memory_status`::
-  (++) TBD. For example: "ok".
+  () TBD. For example: "ok".
 
 `model_bytes`::
-  (++) TBD. For example: 100393.
+  () TBD. For example: 100393.
 
 `result_type`::
-  (++) TBD. For example: "model_size_stats".
+  () TBD. For example: "model_size_stats".
 
 `timestamp`::
-  (++) TBD. For example: 1455229800000.
+  () TBD. For example: 1455229800000.
 
 `total_by_field_count`::
-  (++) TBD. For example: 13.
+  () TBD. For example: 13.
 
 `total_over_field_count`::
-  (++) TBD. For example: 0.
+  () TBD. For example: 0.
 
 `total_partition_field_count`::
-  (++) TBD. For example: 2.
+  () TBD. For example: 2.
