--- a/docs/en/rest-api/ml/update-job.asciidoc
+++ b/docs/en/rest-api/ml/update-job.asciidoc
@@ -17,18 +17,18 @@ data is sent to it.
 ===== Path Parameters
 
 `job_id` (required)::
-  (+string+) Identifier for the job
+  (string) Identifier for the job
 
 ===== Request Body
 
 The following properties can be updated after the job is created:
 
 `analysis_config`::
-  (+object+) The analysis configuration, which specifies how to analyze the data.
+  (object) The analysis configuration, which specifies how to analyze the data.
   See <<ml-analysisconfig, analysis configuration objects>>.  In particular, the following properties can be updated: `categorization_filters`, `detector_description`, TBD.
 
 `analysis_limits`::
-  (+object+) Specifies runtime limits for the job.
+  (object) Specifies runtime limits for the job.
   See <<ml-apilimits,analysis limits>>. NOTE:
   * You can update the `analysis_limits` only while the job is closed.
   * The `model_memory_limit` property value cannot be decreased.
@@ -36,7 +36,7 @@ The following properties can be updated after the job is created:
   increasing the `model_memory_limit` is not recommended.
 
 `description`::
-  (+string+) An optional description of the job.
+  (string) An optional description of the job.
 
 ////
 This expects data to be sent in JSON format using the POST `_data` API.
