--- a/docs/en/rest-api/ml/delete-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/delete-snapshot.asciidoc
@@ -33,22 +33,22 @@ first revert to a different one.
 412
 (BasicFailedReply) The Elasticsearch cluster has not been shutdown yet (code: clusters.cluster_plan_state_error)
 
-
+////
 ===== Examples
 
-The following example deletes the `event_rate` job:
+The following example deletes the `1491948163` snapshot:
 
 [source,js]
 --------------------------------------------------
-DELETE _xpack/ml/anomaly_detectors/event_rate
+DELETE _xpack/ml/anomaly_detectors/farequote/model_snapshots/1491948163
 --------------------------------------------------
 // CONSOLE
 // TEST[skip:todo]
 
-When the job is deleted, you receive the following results:
+When the snapshot is deleted, you receive the following results:
+
 ----
 {
   "acknowledged": true
 }
 ----
-////
