--- a/docs/en/ml/introduction.asciidoc
+++ b/docs/en/ml/introduction.asciidoc
@@ -38,7 +38,7 @@ Jobs::
 Data feeds::
   Jobs can analyze either a batch of data from a data store or a stream of data
   in real-time. The latter involves data that is retrieved from {es} and is
-  referred to as a _data feed_.
+  referred to as a data feed.
 
 Detectors::
   Part of the configuration information associated with a job, detectors define
@@ -54,7 +54,12 @@ Buckets::
   bucket span, take into account the granularity at which you want to analyze,
   the frequency of the input data, and the frequency at which alerting is required.
 
-
+Machine learning nodes::
+  A {ml} node is a node that has `xpack.ml.enabled` and `node.ml` set to `true`,
+  which is the default behavior. If you set `node.ml` to `false`, the node can
+  service API requests but it cannot run jobs. If you want to use {xpack} {ml}
+  features, there must be at least one {ml} node in your cluster.
+  For more information about this setting, see <<ml-settings>>.
 
 
 
